[gd_scene load_steps=7 format=3 uid="uid://bfe2atjcmt605"]

[ext_resource type="Script" uid="uid://dpfordpnms0sa" path="res://ui/quest_ui/QuestRewardUI.gd" id="1_0m5yx"]
[ext_resource type="Script" uid="uid://jm3yoj5s1wvc" path="res://ui/inventory_ui/ItemDropArea.gd" id="1_o6fn8"]
[ext_resource type="Texture2D" uid="uid://bg87pigjk72d3" path="res://assets/icons/resources/coins.png" id="2_0m5yx"]
[ext_resource type="PackedScene" uid="uid://cj5k2kcgyqnnt" path="res://ui/quest_ui/SelectedCoinsDisplay.tscn" id="3_kl2fj"]
[ext_resource type="Script" uid="uid://muut3gmsg30f" path="res://ui/inventory_ui/ItemsDisplayContainer.gd" id="4_yis78"]
[ext_resource type="Script" uid="uid://bpcsenk3ubug2" path="res://inventory/ItemContainer.gd" id="5_58tya"]

[node name="QuestRewardUI" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0m5yx")

[node name="CenterMarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="RewardUIContainer" type="VBoxContainer" parent="CenterMarginContainer" node_paths=PackedStringArray("item_display_container")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("1_o6fn8")
item_display_container = NodePath("ItemsDisplayContainer")

[node name="HintMarginContainer" type="MarginContainer" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HintLabel" type="Label" parent="CenterMarginContainer/RewardUIContainer/HintMarginContainer"]
custom_minimum_size = Vector2(20, 10)
layout_mode = 2
size_flags_vertical = 3
text = "Choose how the adventurers will pay of their debt - with items or gold"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="OwedCoinsDisplay" type="HBoxContainer" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterMarginContainer/RewardUIContainer/OwedCoinsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
text = "Owed:"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterMarginContainer/RewardUIContainer/OwedCoinsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="OwedPartyCoinsLabel" type="Label" parent="CenterMarginContainer/RewardUIContainer/OwedCoinsDisplay/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "+4"

[node name="TextureRect" type="TextureRect" parent="CenterMarginContainer/RewardUIContainer/OwedCoinsDisplay/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_0m5yx")

[node name="Control" type="Control" parent="CenterMarginContainer/RewardUIContainer/OwedCoinsDisplay"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AvailableCoinsDisplay" type="HBoxContainer" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterMarginContainer/RewardUIContainer/AvailableCoinsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
text = "Available:"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterMarginContainer/RewardUIContainer/AvailableCoinsDisplay"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="AvailablePartyCoinsLabel" type="Label" parent="CenterMarginContainer/RewardUIContainer/AvailableCoinsDisplay/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "+4"

[node name="TextureRect" type="TextureRect" parent="CenterMarginContainer/RewardUIContainer/AvailableCoinsDisplay/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("2_0m5yx")

[node name="SelectedCoinsDisplay" parent="CenterMarginContainer/RewardUIContainer" node_paths=PackedStringArray("item_value_label") instance=ExtResource("3_kl2fj")]
unique_name_in_owner = true
layout_mode = 2
item_value_label = NodePath("../ItemsDisplayContainer/HBoxContainer/ItemValueLabel")

[node name="ItemsDisplayContainer" type="VBoxContainer" parent="CenterMarginContainer/RewardUIContainer" node_paths=PackedStringArray("item_container", "item_display_container")]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_yis78")
item_container = NodePath("../ItemRewards")
item_display_container = NodePath(".")

[node name="HBoxContainer" type="HBoxContainer" parent="CenterMarginContainer/RewardUIContainer/ItemsDisplayContainer"]
layout_mode = 2
alignment = 1

[node name="ItemsLabel" type="Label" parent="CenterMarginContainer/RewardUIContainer/ItemsDisplayContainer/HBoxContainer"]
layout_mode = 2
text = "Items Chosen: "
horizontal_alignment = 1

[node name="ItemValueLabel" type="Label" parent="CenterMarginContainer/RewardUIContainer/ItemsDisplayContainer/HBoxContainer"]
layout_mode = 2
text = "0"

[node name="TextureRect" type="TextureRect" parent="CenterMarginContainer/RewardUIContainer/ItemsDisplayContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("2_0m5yx")

[node name="TakeRewardsButton" type="Button" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
text = "Take Rewards"

[node name="AbandonQuestButton" type="Button" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
text = "Back"

[node name="FillControl" type="Control" parent="CenterMarginContainer/RewardUIContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ItemRewards" type="Node" parent="CenterMarginContainer/RewardUIContainer"]
unique_name_in_owner = true
script = ExtResource("5_58tya")

[node name="LootContainer" type="VBoxContainer" parent="." node_paths=PackedStringArray("item_container", "item_display_container")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("4_yis78")
item_container = NodePath("QuestLoot")
item_display_container = NodePath(".")

[node name="LootLabel" type="Label" parent="LootContainer"]
layout_mode = 2
text = "Loot"

[node name="QuestLoot" type="Node" parent="LootContainer"]
unique_name_in_owner = true
script = ExtResource("5_58tya")

[connection signal="pressed" from="CenterMarginContainer/RewardUIContainer/TakeRewardsButton" to="." method="_on_take_rewards_button_pressed"]
[connection signal="pressed" from="CenterMarginContainer/RewardUIContainer/AbandonQuestButton" to="." method="_on_abandon_quest_button_pressed"]
